test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_include.draco
\test.g

proc main() void : a := 1; corp;

