test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_include_with_intervening_comments.draco
\test.g
/* this is illegal because of the following include */
\illegal.g

proc main() void : a := 1; corp;

